--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <div class="footer" align="center">
 
-  Designed by <a href=http://diezcami.github.io target="_blank">Camille Diez</a><BR />
-  Powered by <a href=http://jekyllrb.com target="_blank">Jekyll</a>
+  Nos siga no <a href=http://instagram.com/belvederepiscinas target="_blank">Instagram</a><BR />
+  Atendendo toda BH pelo <a href= target="_blank">(31) 9 8354-6772</a>
 
 </div>
