--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <div class="footer" align="center">
 
   Nos siga no <a href=http://instagram.com/belvederepiscinas target="_blank">Instagram</a><BR />
-  Atendendo toda BH pelo <a href= target="_blank">(31) 9 8354-6772</a>
+  Atendendo toda BH pelo <a href="/sobre/">(31) 9 8354-6772</a>
 
 </div>
