--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,11 +6,20 @@
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
           {% endif %}
         {% endfor %}
+        <a class="page-link" href="https://www.instagram.com/belvederepiscinas/" target="_blank">
+          <i class="fa fa-instagram fa-lg"></i>
+        </a>
+        <a class="page-link" href="/sobre/">
+          <!--i class="fa fa-phone fa-lg"></i-->
+           (31) 9 8354-6772
+        </a>
     </nav>
 
     <h1>
      <span>
-      <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+      <a class="site-title" href="{{ site.baseurl }}/">
+        <img class="img-responsive" src="{{ site.baseurl }}/img/logo.png" alt="Belvedere Piscinas">
+      </a>
      </span>
     </h1>
 
