Removing Logo Border

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -34,7 +34,7 @@
     }
 
     .site-header span {
-        border: 10px solid #FFF;
+        /*border: 10px solid #FFF;*/
         padding: 0.3em 0.5em;
         margin: 10px 20px;
         display: inline-block;
