--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,7 +2,7 @@
  * ============================================== */
     .site-header {
         min-height: 450px;
-        background-color: $brand-color;
+        background-color: $background-color;
         background-image: url('');
         background-size: cover;
         background-position: center -170px;
@@ -14,7 +14,7 @@
         }
     }
 
-    .site-header a, a h1:hover {color: #FFF};
+    .site-header a, a h1:hover {color: $text-color};
 
     .site-header h1 {
         display: block;
